@@ -365,7 +365,8 @@ CREATE TABLE users (
   ip inet NOT NULL DEFAULT '0.0.0.0',
   c_tags integer NOT NULL DEFAULT 0,
   salt character(9) NOT NULL DEFAULT '',
-  ign_votes boolean NOT NULL DEFAULT FALSE
+  ign_votes boolean NOT NULL DEFAULT FALSE,
+  email_confirmed boolean NOT NULL DEFAULT FALSE
 );
 
 -- users_prefs
